# italian-discord-bot

./: .replit  grammatica.py  main.py  pyproject.toml  replit  replit.nix  requirements.txt  session_manager.py  utils.py
cogs/: ascolto.py  coniuga.py  espressioni.py  frasi.py  indovina.py  lyrics.py  post.py  quiz.py  reminder.py  wordle.py
