[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = "Discord bot with OpenAI and Flask"
authors = ["Jij"]

[tool.poetry.dependencies]
python = "^3.11"
discord.py = "^2.3.2"
openai = "^1.0.0"
flask = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"